fixed horizontal scroll in projects (#327)

--- a/frontend_nextjs/styles/projects.css
+++ b/frontend_nextjs/styles/projects.css
@@ -8,6 +8,7 @@
 }
 
 .project-card-div{
+    padding: 0;
     margin-top: 15px;
 }
 
